logs/dag_id=ETL/run_id=manual__2023-05-24T17:09:20.161548+00:00/task_id=add_data/attempt=2.log
[2023-05-24T17:11:16.458+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.add_data manual__2023-05-24T17:09:20.161548+00:00 [queued]>
[2023-05-24T17:11:16.479+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.add_data manual__2023-05-24T17:09:20.161548+00:00 [queued]>
[2023-05-24T17:11:16.480+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-24T17:11:16.480+0000] {taskinstance.py:1283} INFO - Starting attempt 2 of 7
[2023-05-24T17:11:16.480+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-24T17:11:16.516+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): add_data> on 2023-05-24 17:09:20.161548+00:00
[2023-05-24T17:11:16.538+0000] {standard_task_runner.py:55} INFO - Started process 3473 to run task
[2023-05-24T17:11:16.553+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'add_data', 'manual__2023-05-24T17:09:20.161548+00:00', '--job-id', '149', '--raw', '--subdir', 'DAGS_FOLDER/refresh_token_DAG.py', '--cfg-path', '/tmp/tmp3j_eljdk']
[2023-05-24T17:11:16.560+0000] {standard_task_runner.py:83} INFO - Job 149: Subtask add_data
[2023-05-24T17:11:16.682+0000] {task_command.py:388} INFO - Running <TaskInstance: ETL.add_data manual__2023-05-24T17:09:20.161548+00:00 [running]> on host 2fa3ade57007
[2023-05-24T17:11:16.808+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=ETL
AIRFLOW_CTX_TASK_ID=add_data
AIRFLOW_CTX_EXECUTION_DATE=2023-05-24T17:09:20.161548+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-24T17:09:20.161548+00:00
[2023-05-24T17:11:16.809+0000] {sql.py:254} INFO - Executing: 
            insert into spotify_data (played_at, artist, name_track, timestamps) 
            values ('spotify_df['played_at']', 'spotify_df['artist']', 'spotify_df['name_track']', 'spotify_df['timestamps']')
        
[2023-05-24T17:11:16.822+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-24T17:11:17.257+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-24T17:11:17.263+0000] {sql.py:375} INFO - Running statement: 
            insert into spotify_data (played_at, artist, name_track, timestamps) 
            values ('spotify_df['played_at']', 'spotify_df['artist']', 'spotify_df['name_track']', 'spotify_df['timestamps']')
        , parameters: None
[2023-05-24T17:11:17.265+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "played_at"
LINE 3:             values ('spotify_df['played_at']', 'spotify_df['...
                                         ^

[2023-05-24T17:11:17.284+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL, task_id=add_data, execution_date=20230524T170920, start_date=20230524T171116, end_date=20230524T171117
[2023-05-24T17:11:17.310+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 149 for task add_data (syntax error at or near "played_at"
LINE 3:             values ('spotify_df['played_at']', 'spotify_df['...
                                         ^
; 3473)
[2023-05-24T17:11:17.351+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-24T17:11:17.378+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
